--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,11 @@
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
     "angular-sanitize": "~1.0.7",
-    "bootstrap": "~3.0.2",
-    "bootstrap-floating-labels": "https://github.com/fauxparse/bootstrap-floating-labels.git"
+    "ng-grid": "~2.0.7",
+    "bootstrap-floating-labels": "https://github.com/fauxparse/bootstrap-floating-labels.git",
+    "lodash": "~2.4.1",
+    "angular-socket-io": "~0.2.0",
+    "toastr": "~2.0.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
